# RiplAlpha

./: CMakeLists.txt  README.md  TODO
example/: main.c
src/: audio_buffer.c  audio_buffer.h  midi_buffer.c  midi_buffer.h  mixer.c  mixer.h  ripl.c  ripl.h  state.h
src/backends/: jack.c  jack.h
src/dsp/: dsp.c  dsp.h  envelope.c  envelope.h  waveform.c  waveform.h
src/nodes/midi_player/: midi_player.c  midi_player.h
src/nodes/valvula/: operator.c  operator.h  valvula.c  valvula.h  voice.c  voice.h  voice_bank.c  voice_bank.h
